chore: fix performance tests jupiter mode activation
This fixes ExecutionMode enum in generated SDK.
Enum values have to be in lowercase in order to match json format expected by gateway.

--- a/gravitee-apim-perf/.env
+++ b/gravitee-apim-perf/.env
@@ -19,5 +19,5 @@ SIMPLE_PASSWORD=password
 
 # API configuration
 API_ENDPOINT_URL=https://load-tests-echo-api.cloud.gravitee.io/echo
-# V3 | JUPITER
-API_EXECUTION_MODE=JUPITER
+# v3 | jupiter
+API_EXECUTION_MODE=jupiter
