feat: add "feature" notion on connectors

--- a/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-kafka/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-kafka/src/main/resources/plugin.properties
@@ -4,3 +4,4 @@ version=${project.version}
 description=${project.description}
 class=io.gravitee.plugin.endpoint.kafka.KafkaEndpointConnectorFactory
 type=endpoint-connector
+features=limit,resume
