--- a/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-mock/src/main/resources/plugin.properties
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-endpoint/gravitee-apim-plugin-endpoint-mock/src/main/resources/plugin.properties
@@ -4,3 +4,4 @@ version=${project.version}
 description=${project.description}
 class=io.gravitee.plugin.endpoint.mock.MockEndpointConnectorFactory
 type=endpoint-connector
+features=limit,resume
