--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <gravitee-resource-cache-provider-api.version>1.3.0</gravitee-resource-cache-provider-api.version>
         <gravitee-resource-oauth2-provider-api.version>1.3.0</gravitee-resource-oauth2-provider-api.version>
         <gravitee-service-discovery-api.version>1.1.1</gravitee-service-discovery-api.version>
+        <gravitee-kubernetes-mapper.version>0.4.0-SNAPSHOT</gravitee-kubernetes-mapper.version>
         <!-- Other dependencies version -->
         <asm.version>9.2</asm.version>
         <batik-transcoder.version>1.14</batik-transcoder.version>
@@ -356,6 +357,12 @@
                 <groupId>io.gravitee.discovery</groupId>
                 <artifactId>gravitee-service-discovery-api</artifactId>
                 <version>${gravitee-service-discovery-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.gravitee.kubernetes</groupId>
+                <artifactId>gravitee-kubernetes-mapper</artifactId>
+                <version>${gravitee-kubernetes-mapper.version}</version>
             </dependency>
 
             <!-- Other dependencies -->
