chore(perf): set localhost as default API_ENDPOINT_URL

--- a/gravitee-apim-perf/.env
+++ b/gravitee-apim-perf/.env
@@ -18,6 +18,6 @@ SIMPLE_USERNAME=user
 SIMPLE_PASSWORD=password
 
 # API configuration
-API_ENDPOINT_URL=https://load-tests-echo-api.cloud.gravitee.io/echo
+API_ENDPOINT_URL=http://localhost:8080/echo
 # v3 | jupiter
 API_EXECUTION_MODE=jupiter
