chore(perf): use the same version of @types/node as in e2e

--- a/gravitee-apim-perf/.env
+++ b/gravitee-apim-perf/.env
@@ -20,4 +20,4 @@ SIMPLE_PASSWORD=password
 # API configuration
 API_ENDPOINT_URL=http://localhost:8080/echo
 # v3 | jupiter
-API_EXECUTION_MODE=jupiter
+API_EXECUTION_MODE=v3
