ci: remove bold character in release step as they are not handled properly [skip ci]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -792,7 +792,7 @@ jobs:
                                       "type": "section",
                                       "text": {
                                         "type": "mrkdwn",
-                                        "text": "🚂 Starting **APIM << pipeline.parameters.graviteeio_version >>** release"
+                                        "text": "🚂 Starting APIM << pipeline.parameters.graviteeio_version >> release"
                                       }
                                     }
                                   ]
