--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -509,6 +509,7 @@ jobs:
                   root: ./
                   paths:
                       - ./gravitee-*/*/target/*
+                      - ./gravitee-apim-rest-api/gravitee-apim-rest-api-management/gravitee-apim-rest-api-management-rest/target/classes/console-openapi.*
                       - ./rest-api-docker-context
                       - ./gateway-docker-context
 
@@ -730,6 +731,34 @@ jobs:
                       docker push ${GATEWAY_PRIVATE_IMAGE_TAG}
                       docker logout graviteeio.azurecr.io
             - notify-on-failure
+
+    e2e-generate-sdk:
+      executor:
+        name: openjdk
+        with_node: true
+        class: small
+      steps:
+        - checkout
+        - webui-install:
+            apim-ui-project: gravitee-apim-e2e
+        - attach_workspace:
+            at: .
+        - run:
+            name: Generate e2e tests SDK
+            command: |
+              npm run update:sdk:management
+              npm run update:sdk:portal
+            working_directory: gravitee-apim-e2e
+        - run:
+            name: Check e2e tests SDK changes
+            command: |
+              if [[ `git status lib --porcelain` ]]; then
+                echo "AIM E2E tests SDK has some uncommitted changes."
+                echo "Please regenerate it, commit the changes, and ensure the e2e tests are still running."
+                exit 1
+              fi
+            working_directory: gravitee-apim-e2e
+        - notify-on-failure
 
     e2e-lint-build:
         executor:
@@ -1940,12 +1969,17 @@ workflows:
                           only:
                               - master
                               - /^\d+\.\d+\.x$/
-            # To be modified when testing strategy will be defined
+            - e2e-generate-sdk:
+                  name: Generate e2e tests SDK
+                  context: cicd-orchestrator
+                  requires:
+                    - setup
+                    - build
             - e2e-lint-build:
                   name: Lint & Build APIM e2e
                   context: cicd-orchestrator
                   requires:
-                      - setup
+                      - Generate e2e tests SDK
             - e2e-test:
                   context: cicd-orchestrator
                   name: Test APIM E2E - << matrix.execution_mode >> - << matrix.database >>
