ci: add changelog generation in ci
(cherry picked from commit 54566d604e463915fecadae9889af6bd32ad508a)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -244,7 +244,7 @@ commands:
 parameters:
     gio_action:
         type: enum
-        enum: [release, package_bundle, nexus_staging, pull_requests, build_rpm_&_docker_images]
+        enum: [release, package_bundle, nexus_staging, pull_requests, build_rpm_&_docker_images, changelog_apim]
         default: pull_requests
     dry_run:
         type: boolean
@@ -258,6 +258,10 @@ parameters:
         default: ""
         type: string
         description: "Version of APIM to be used in docker images"
+    gio_milestone_version:
+      type: string
+      default: $GIO_MILESTONE_VERSION
+      description: "The Gravitee.io Milestone version https://github.com/gravitee-io/issues/milestones for which we want to generate Changelog"
 
 jobs:
     setup:
@@ -1457,6 +1461,54 @@ jobs:
                                 --acl public-read
                             from: ./release/.tmp/<< pipeline.parameters.graviteeio_version >>/dist
                             to: "s3://gravitee-releases-downloads/graviteeio-apim"
+    changelog_apim:
+      docker:
+        - image: groovy:jdk11
+          user: root
+      resource_class: small
+      environment:
+        MILESTONE_VERSION: << pipeline.parameters.gio_milestone_version >>
+      steps:
+        - checkout
+        - keeper/env-export:
+            secret-url: keeper://IZd-yvsMopfQEa_0j1SDvg/field/login
+            var-name: GIT_USER_NAME
+        - keeper/env-export:
+            secret-url: keeper://IZd-yvsMopfQEa_0j1SDvg/custom_field/email
+            var-name: GIT_USER_EMAIL
+        - keeper/env-export:
+            secret-url: keeper://TIlcGPFq4rN5GvgnZb9hng/field/password
+            var-name: GITHUB_TOKEN
+        - add_ssh_keys:
+            fingerprints:
+              - "ac:88:23:8f:c6:0f:7d:f0:fc:df:73:20:34:56:02:6c"
+        - run:
+            name: Git config
+            command: |
+              apt-get -y update
+              apt-get -y install git
+              git config --global user.name "${GIT_USER_NAME}"
+              git config --global user.email "${GIT_USER_EMAIL}"
+        - gh/setup
+        - run:
+            name: "Generate Changelog for Gravitee.io APIM"
+            command: groovy -DMILESTONE_VERSION="$MILESTONE_VERSION" .circleci/githubChangelogGenerator.groovy
+        - run:
+            name: "Commit Changelog and open a PR on the repository"
+            command: |
+              # Sanitize MILESTONE_VERSION
+              MILESTONE_VERSION_SANITIZED=$(echo ${MILESTONE_VERSION} | sed -e 's/[^a-zA-Z0-9]//g')
+
+              # Create a branch for the changelog PR
+              git checkout -b "changelog_apim_pr_${MILESTONE_VERSION_SANITIZED}"
+
+              # Commit the changelog
+              git add ./release/changelog/CHANGELOG*.adoc
+              git commit -m "Generate changelog for version ${MILESTONE_VERSION}"
+
+              # Push the branch and open a PR
+              git push --set-upstream origin "changelog_apim_pr_${MILESTONE_VERSION_SANITIZED}"
+              gh pr create --title "Changelog for ${MILESTONE_VERSION}" --body "Generate changelog for version ${MILESTONE_VERSION}" --reviewer "@gravitee-io/apim"
 
 workflows:
     pull_requests:
@@ -1829,3 +1881,10 @@ workflows:
                   matrix:
                       parameters:
                           version: ["3", "4", "5"]
+
+    changelog_apim:
+      when:
+        equal: [ changelog_apim, << pipeline.parameters.gio_action >> ]
+      jobs:
+        - changelog_apim:
+            context: cicd-orchestrator
