--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1648,6 +1648,9 @@ jobs:
             - keeper/env-export:
                   secret-url: keeper://R7NuqoW0KD-8l-kjx0-PgQ/field/password
                   var-name: ARTIFACTORY_PASSWORD
+            - keeper/env-export:
+                secret-url: keeper://ZOz4db245GNaETVwmPBk8w/field/password
+                var-name: SLACK_ACCESS_TOKEN
             - checkout
             - run:
                   name: Install dependencies
@@ -1657,31 +1660,71 @@ jobs:
                   name: "Building package bundle"
                   working_directory: "./release"
                   command: npm run zx -- --experimental ci-steps/package-bundles.mjs --version=<< pipeline.parameters.graviteeio_version >>
-            - keeper/env-export:
-                  secret-url: keeper://Mqmplmfu17bDR5XRLmO1mQ/field/password
-                  var-name: AWS_ACCESS_KEY_ID
-            - keeper/env-export:
-                  secret-url: keeper://3-pU56sIqcyWWw7HxhxjaQ/field/password
-                  var-name: AWS_SECRET_ACCESS_KEY
+            - run:
+                  name: "Comparing bundle size with previous version"
+                  working_directory: "./release"
+                  command: |
+                    npm run zx -- --experimental ci-steps/check-bundle-size.mjs
+                    echo "export BUNDLE_SIZE_MESSAGE=$(cat .tmp/bundle-size.md)" >> $BASH_ENV
             - when:
-                  condition: << pipeline.parameters.dry_run>>
-                  steps:
-                      - aws-s3/sync:
-                            arguments: |
-                                --endpoint-url https://cellar-c2.services.clever-cloud.com \
-                                --acl public-read
-                            from: ./release/.tmp/<< pipeline.parameters.graviteeio_version >>/dist
-                            to: "s3://gravitee-dry-releases-downloads/graviteeio-apim"
-            - when:
-                  condition:
-                      not: << pipeline.parameters.dry_run>>
-                  steps:
-                      - aws-s3/sync:
-                            arguments: |
-                                --endpoint-url https://cellar-c2.services.clever-cloud.com \
-                                --acl public-read
-                            from: ./release/.tmp/<< pipeline.parameters.graviteeio_version >>/dist
-                            to: "s3://gravitee-releases-downloads/graviteeio-apim"
+                condition:
+                  not: << pipeline.parameters.dry_run>>
+                steps:
+                  - slack/notify:
+                      channel: C02JENTV2AX
+                      event: always
+                      custom: |
+                        {
+                          "blocks": [
+                            {
+                              "type": "section",
+                              "text": {
+                                "type": "mrkdwn",
+                                "text": "$BUNDLE_SIZE_MESSAGE"
+                              }
+                            },
+                            {
+                                "type": "actions",
+                                "elements": [
+                                   {
+                                      "type": "button",
+                                      "text": "🧐 Approve to continue",
+                                      "url": "https://app.circleci.com/pipelines/workflows/$CIRCLE_WORKFLOW_ID"
+                                   }
+                                ]
+                        	 }
+                          ]
+                        }
+    publish-bundle:
+        docker:
+          - image: cimg/base:stable
+        steps:
+          - keeper/env-export:
+              secret-url: keeper://Mqmplmfu17bDR5XRLmO1mQ/field/password
+              var-name: AWS_ACCESS_KEY_ID
+          - keeper/env-export:
+              secret-url: keeper://3-pU56sIqcyWWw7HxhxjaQ/field/password
+              var-name: AWS_SECRET_ACCESS_KEY
+          - when:
+              condition: << pipeline.parameters.dry_run>>
+              steps:
+                - aws-s3/sync:
+                    arguments: |
+                      --endpoint-url https://cellar-c2.services.clever-cloud.com \
+                      --acl public-read
+                    from: ./release/.tmp/<< pipeline.parameters.graviteeio_version >>/dist
+                    to: "s3://gravitee-dry-releases-downloads/graviteeio-apim"
+          - when:
+              condition:
+                not: << pipeline.parameters.dry_run>>
+              steps:
+                - aws-s3/sync:
+                    arguments: |
+                      --endpoint-url https://cellar-c2.services.clever-cloud.com \
+                      --acl public-read
+                    from: ./release/.tmp/<< pipeline.parameters.graviteeio_version >>/dist
+                    to: "s3://gravitee-releases-downloads/graviteeio-apim"
+
     changelog_apim:
       docker:
         - image: groovy:jdk11
@@ -1730,7 +1773,6 @@ jobs:
               # Push the branch and open a PR
               git push --set-upstream origin "changelog_apim_pr_${MILESTONE_VERSION_SANITIZED}"
               gh pr create --title "Changelog for ${MILESTONE_VERSION}" --body "Generate changelog for version ${MILESTONE_VERSION}" --reviewer "@gravitee-io/apim"
-
 workflows:
     pull_requests:
         when:
@@ -2074,6 +2116,14 @@ workflows:
         jobs:
             - package-bundle:
                   context: cicd-orchestrator
+            - review-bundle-size:
+                  type: approval
+                  requires:
+                    - package-bundle
+            - publish-bundle:
+                  context: cicd-orchestrator
+                  requires:
+                    - review-bundle-size
 
     nexus_staging:
         when:
