test: event-native integration test cases - sse entrypoint with kafka endpoint - http-post with kafka endpoint - http-get with kafka endpoint

--- a/gravitee-apim-plugin/gravitee-apim-plugin-coverage/pom.xml
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-coverage/pom.xml
@@ -118,6 +118,11 @@
             <artifactId>gravitee-apim-plugin-apiservice-servicediscovery-consul</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.gravitee.apim.plugin</groupId>
+            <artifactId>gravitee-apim-plugin-tests-integration</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
