--- a/gravitee-apim-plugin/pom.xml
+++ b/gravitee-apim-plugin/pom.xml
@@ -82,5 +82,6 @@
         <module>gravitee-apim-plugin-entrypoint</module>
         <module>gravitee-apim-plugin-coverage</module>
         <module>gravitee-apim-plugin-apiservice</module>
+        <module>gravitee-apim-plugin-tests-integration</module>
     </modules>
 </project>
