--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -70,7 +70,7 @@
         <gravitee-policy-latency.version>1.4.0</gravitee-policy-latency.version>
         <gravitee-policy-metrics-reporter.version>2.0.0</gravitee-policy-metrics-reporter.version>
         <gravitee-policy-mock.version>1.13.0</gravitee-policy-mock.version>
-	<gravitee-policy-oauth2.version>1.23.0</gravitee-policy-oauth2.version>
+        <gravitee-policy-oauth2.version>1.23.0</gravitee-policy-oauth2.version>
         <gravitee-policy-openid-connect-userinfo.version>1.5.2</gravitee-policy-openid-connect-userinfo.version>
         <gravitee-policy-override-http-method.version>1.3.0</gravitee-policy-override-http-method.version>
         <!--    Version of policy-ratelimit is also used for policy-quota, policy-spikearrest and gateway-services-ratelimit    -->
@@ -167,13 +167,6 @@
         <dependency>
             <groupId>io.gravitee.apim.plugin.endpoint</groupId>
             <artifactId>gravitee-apim-plugin-endpoint-mock</artifactId>
-            <version>${project.version}</version>
-            <scope>runtime</scope>
-            <type>zip</type>
-        </dependency>
-        <dependency>
-            <groupId>io.gravitee.apim.plugin.endpoint</groupId>
-            <artifactId>gravitee-apim-plugin-endpoint-kafka</artifactId>
             <version>${project.version}</version>
             <scope>runtime</scope>
             <type>zip</type>
@@ -731,6 +724,14 @@
                     <version>${gravitee-connector-kafka.version}</version>
                     <type>zip</type>
                     <scope>runtime</scope>
+                </dependency>
+                <!-- Endpoints -->
+                <dependency>
+                    <groupId>io.gravitee.apim.plugin.endpoint</groupId>
+                    <artifactId>gravitee-apim-plugin-endpoint-kafka</artifactId>
+                    <version>${project.version}</version>
+                    <scope>runtime</scope>
+                    <type>zip</type>
                 </dependency>
                 <!-- Policies -->
                 <dependency>
