--- a/gravitee-apim-e2e/docker/common/docker-compose-apis.yml
+++ b/gravitee-apim-e2e/docker/common/docker-compose-apis.yml
@@ -42,7 +42,7 @@ services:
       - gravitee_api_jupiterMode_enabled=${JUPITER_MODE_ENABLED:-false}
       - gravitee_api_jupiterMode_default=always
       - gravitee_services_sync_cron=*/2 * * * * *
-      - "JAVA_OPTS=${JAVA_OPTS} {JACOCO_OPTS}"
+      - "JAVA_OPTS=${JAVA_OPTS} ${JACOCO_OPTS}"
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://admin:admin@localhost:8083/management/organizations/DEFAULT/user" ]
       interval: 3s
@@ -71,7 +71,7 @@ services:
       - gravitee_reporters_elasticsearch_endpoints_0=http://elasticsearch:9200
       - gravitee_api_jupiterMode_enabled=${JUPITER_MODE_ENABLED:-false}
       - gravitee_services_sync_delay=2000
-      - "JAVA_OPTS=${JAVA_OPTS} {JACOCO_OPTS}"
+      - "JAVA_OPTS=${JAVA_OPTS} ${JACOCO_OPTS}"
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://admin:adminadmin@localhost:18082/_node" ]
       interval: 2s
