--- a/gravitee-apim-rest-api/sonar-project.properties
+++ b/gravitee-apim-rest-api/sonar-project.properties
@@ -23,4 +23,4 @@ sonar.test.inclusions=**/*Test.java
 
 # Coverage
 sonar.coverage.jacoco.xmlReportPaths=gravitee-apim-rest-api-coverage/target/site/jacoco-aggregate/jacoco.xml
-sonar.coverage.exclusions=**/pom.xml, **/src/test/**, **/model/**
+sonar.coverage.exclusions=**/pom.xml, **/src/test/**, **/model/**, **/exception/**
