--- a/docker/quick-setup/nginx/docker-compose.yml
+++ b/docker/quick-setup/nginx/docker-compose.yml
@@ -120,6 +120,7 @@ services:
       - management_api
     environment:
       - MGMT_API_URL=/console/api/organizations/DEFAULT/environments/DEFAULT/
+      - CONSOLE_BASE_HREF=/console/
     volumes:
       - ./.logs/apim-management-ui:/var/log/nginx
     networks:
