--- a/gravitee-apim-e2e/package.json
+++ b/gravitee-apim-e2e/package.json
@@ -16,7 +16,7 @@
         "test:api:mongo": "sh ./scripts/run-docker-compose.sh api-test mongo",
         "test:api:jdbc": "sh ./scripts/run-docker-compose.sh api-test jdbc",
         "test:api:dev": "jest --runInBand --no-cache",
-        "test:api:ci": "jest --runInBand --ci -c jest.config.ci.js --no-cache",
+        "test:api:ci": "jest --runInBand --ci -c jest.config.ci.js --no-cache --reporters=default --reporters=jest-junit",
         "test:report": "ENV=ci ant -f jacoco/build.xml",
         "test:report:dev": "ENV=dev ant -f jacoco/build.xml",
         "test:report:merge": "ant -f jacoco/merge.xml",
@@ -44,6 +44,7 @@
         "dotenv": "16.0.0",
         "har-validator": "5.1.5",
         "jest": "27.5.1",
+        "jest-junit": "^14.0.1",
         "license-check-and-add": "4.0.3",
         "node-fetch": "2.6.7",
         "prettier": "2.5.1",
