--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1534,6 +1534,7 @@ jobs:
                         echo "Enabling jupiter mode on APIM Gateway and Rest API"
                         export JUPITER_MODE_ENABLED=true
                       fi
+                      mkdir reports && chmod -R 0777 reports
                       APIM_REGISTRY=graviteeio.azurecr.io APIM_TAG=$APIM_VERSION npm run test:api:<< parameters.database >>
             - run:
                   name: Rename Jacoco exec file
@@ -1564,7 +1565,9 @@ jobs:
                                 - gravitee-apim-e2e/jacoco/*.xml
             - notify-on-failure
             - store_test_results:
-                  path: ~/test-results
+                  path: ./reports/
+            - store_artifacts:
+                path: ./reports/
     e2e-report:
         executor:
             name: ubuntu
