--- a/gravitee-apim-e2e/docker/api-tests/docker-compose-api-tests.yml
+++ b/gravitee-apim-e2e/docker/api-tests/docker-compose-api-tests.yml
@@ -29,6 +29,9 @@ services:
       - GATEWAY_BASE_URL=http://gateway:8082
       - WIREMOCK_BASE_URL=http://wiremock:8080
       - JUPITER_MODE_ENABLED=${JUPITER_MODE_ENABLED:-false}
+      - JEST_JUNIT_OUTPUT_DIR=/test/reports/
+      - JEST_JUNIT_INCLUDE_CONSOLE_OUTPUT=true
+      - JEST_JUNIT_REPORT_TEST_SUITE_ERRORS=true
     depends_on:
       management_api:
         condition: service_healthy
