--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
     </issueManagement>
     <properties>
         <!-- Version properties -->
-        <revision>3.19.0</revision>
-        <sha1>-.1</sha1>
+        <revision>3.19.1</revision>
+        <sha1></sha1>
         <changelist>-SNAPSHOT</changelist>
 
         <!-- Vert.X version is mandatory for vertx-grpc-protoc-plugin in gravitee-apim-gateway-standalone-container -->
