--- a/gravitee-apim-console-webui/package.json
+++ b/gravitee-apim-console-webui/package.json
@@ -15,10 +15,10 @@
     "@angular/upgrade": "12.2.3",
     "@asyncapi/web-component": "1.0.0-next.15",
     "@fontsource/libre-franklin": "4.4.5",
-    "@gravitee/ui-analytics": "3.10.0",
+    "@gravitee/ui-analytics": "3.11.1",
     "@gravitee/ui-components": "3.36.2",
-    "@gravitee/ui-particles-angular": "3.10.0",
-    "@gravitee/ui-policy-studio-angular": "3.10.0",
+    "@gravitee/ui-particles-angular": "3.11.1",
+    "@gravitee/ui-policy-studio-angular": "3.11.1",
     "@highcharts/map-collection": "1.1.4",
     "@toast-ui/editor": "2.5.4",
     "@toast-ui/editor-plugin-code-syntax-highlight": "1.0.0",
@@ -72,6 +72,7 @@
     "ng-file-upload": "12.2.13",
     "ng-infinite-scroll": "1.3.0",
     "ngclipboard": "2.0.0",
+    "ngx-file-helpers": "^7.0.0",
     "read-more": "0.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "6.6.7",
