feat: improve the way http-get handle ACCEPT header - parse all the values related to ACCEPT header and sort them by quality to select the best one. - improvement of specific cases: null or empty ACCEPT header will fall back to text/plain and */* ACCEPT header will fall back to application/json https://graviteecommunity.atlassian.net/browse/APIM-97

--- a/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-get/pom.xml
+++ b/gravitee-apim-plugin/gravitee-apim-plugin-entrypoint/gravitee-apim-plugin-entrypoint-http-get/pom.xml
@@ -80,6 +80,12 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.gravitee.apim.gateway</groupId>
+            <artifactId>gravitee-apim-gateway-tests-sdk</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
