--- a/gravitee-apim-distribution/pom.xml
+++ b/gravitee-apim-distribution/pom.xml
@@ -733,6 +733,8 @@
                 <!-- Enterprise plugins -->
                 <gravitee-policy-assign-metrics.version>2.0.1</gravitee-policy-assign-metrics.version>
                 <gravitee-policy-data-logging-masking.version>2.0.1</gravitee-policy-data-logging-masking.version>
+                <gravitee-entrypoint-sse-advanced.version>2.0.0-alpha.1</gravitee-entrypoint-sse-advanced.version>
+                <gravitee-endpoint-kafka-advanced.version>1.0.0-alpha.1</gravitee-endpoint-kafka-advanced.version>
 
                 <!-- Management API Only -->
                 <!-- Gateway Only -->
@@ -743,6 +745,22 @@
                     <groupId>io.gravitee.connector</groupId>
                     <artifactId>gravitee-connector-kafka</artifactId>
                     <version>${gravitee-connector-kafka.version}</version>
+                    <type>zip</type>
+                    <scope>runtime</scope>
+                </dependency>
+                <!-- Entrypoints -->
+                <dependency>
+                    <groupId>com.graviteesource.entrypoint</groupId>
+                    <artifactId>gravitee-entrypoint-sse-advanced</artifactId>
+                    <version>${gravitee-entrypoint-sse-advanced.version}</version>
+                    <type>zip</type>
+                    <scope>runtime</scope>
+                </dependency>
+                <!-- Endpoints -->
+                <dependency>
+                    <groupId>com.graviteesource.endpoint</groupId>
+                    <artifactId>gravitee-endpoint-kafka-advanced</artifactId>
+                    <version>${gravitee-endpoint-kafka-advanced.version}</version>
                     <type>zip</type>
                     <scope>runtime</scope>
                 </dependency>
