--- a/docker/quick-setup/gateway-http-bridge-repository/docker-compose.yml
+++ b/docker/quick-setup/gateway-http-bridge-repository/docker-compose.yml
@@ -70,6 +70,7 @@ services:
       - mongodb
     volumes:
       - ./.logs/apim-gateway-server:/opt/graviteeio-gateway/logs
+      - ./.license:/opt/graviteeio-gateway/license
     environment:
       - gravitee_management_mongodb_uri=mongodb://mongodb:27017/gravitee?serverSelectionTimeoutMS=5000&connectTimeoutMS=5000&socketTimeoutMS=5000
       - gravitee_ratelimit_mongodb_uri=mongodb://mongodb:27017/gravitee?serverSelectionTimeoutMS=5000&connectTimeoutMS=5000&socketTimeoutMS=5000
@@ -99,6 +100,7 @@ services:
       - gateway_server
     volumes:
       - ./.logs/apim-gateway-client:/opt/graviteeio-gateway/logs
+      - ./.license:/opt/graviteeio-gateway/license
     environment:
       - gravitee_management_type=http
       - gravitee_management_http_url=http://gateway-server:18092
@@ -126,6 +128,7 @@ services:
       - elasticsearch
     volumes:
       - ./.logs/apim-management-api:/opt/graviteeio-management-api/logs
+      - ./.license:/opt/graviteeio-management-api/license
     environment:
       - gravitee_management_mongodb_uri=mongodb://mongodb:27017/gravitee?serverSelectionTimeoutMS=5000&connectTimeoutMS=5000&socketTimeoutMS=5000
       - gravitee_analytics_elasticsearch_endpoints_0=http://elasticsearch:9200
