--- a/docker/quick-setup/opentracing-jaeger/docker-compose.yml
+++ b/docker/quick-setup/opentracing-jaeger/docker-compose.yml
@@ -94,6 +94,7 @@ services:
     volumes:
       - ./.logs/apim-gateway:/opt/graviteeio-gateway/logs
       - ./.plugins:/opt/graviteeio-gateway/plugins-ext
+      - ./.license:/opt/graviteeio-gateway/license
     environment:
       - gravitee_management_mongodb_uri=mongodb://mongodb:27017/gravitee?serverSelectionTimeoutMS=5000&connectTimeoutMS=5000&socketTimeoutMS=5000
       - gravitee_ratelimit_mongodb_uri=mongodb://mongodb:27017/gravitee?serverSelectionTimeoutMS=5000&connectTimeoutMS=5000&socketTimeoutMS=5000
@@ -123,6 +124,7 @@ services:
       - elasticsearch
     volumes:
       - ./.logs/apim-management-api:/opt/graviteeio-management-api/logs
+      - ./.license:/opt/graviteeio-management-api/license
     environment:
       - gravitee_management_mongodb_uri=mongodb://mongodb:27017/gravitee?serverSelectionTimeoutMS=5000&connectTimeoutMS=5000&socketTimeoutMS=5000
       - gravitee_analytics_elasticsearch_endpoints_0=http://elasticsearch:9200
