--- a/docker/quick-setup/postgresql/docker-compose.yml
+++ b/docker/quick-setup/postgresql/docker-compose.yml
@@ -86,6 +86,7 @@ services:
     volumes:
       - ./.logs/apim-gateway:/opt/graviteeio-gateway/logs
       - ./.driver:/opt/graviteeio-gateway/plugins/ext/repository-jdbc
+      - ./.license:/opt/graviteeio-gateway/license
     environment:
       - gravitee_management_type=jdbc
       - gravitee_management_jdbc_url=jdbc:postgresql://pg_database:5432/gravitee
@@ -115,6 +116,7 @@ services:
     volumes:
       - ./.logs/apim-management-api:/opt/graviteeio-management-api/logs
       - ./.driver:/opt/graviteeio-management-api/plugins/ext/repository-jdbc
+      - ./.license:/opt/graviteeio-management-api/license
     environment:
       - gravitee_management_type=jdbc
       - gravitee_management_jdbc_url=jdbc:postgresql://pg_database:5432/gravitee
