--- a/gravitee-apim-plugin/sonar-project.properties
+++ b/gravitee-apim-plugin/sonar-project.properties
@@ -22,7 +22,7 @@ sonar.test.inclusions=**/*Test.java
 
 # Coverage
 sonar.coverage.jacoco.xmlReportPaths=gravitee-apim-plugin-coverage/target/site/jacoco-aggregate/jacoco.xml
-sonar.coverage.exclusions=**/pom.xml, **/src/test/**, **/model/**
+sonar.coverage.exclusions=**/pom.xml, **/src/test/**, **/model/**, **/*.py
 
 # Code duplication
 sonar.cpd.exclusions=**/src/test/**
