fix(gio-save-bar): prevent multiple submit

--- a/gravitee-apim-console-webui/package.json
+++ b/gravitee-apim-console-webui/package.json
@@ -15,10 +15,10 @@
     "@angular/upgrade": "12.2.3",
     "@asyncapi/web-component": "1.0.0-next.15",
     "@fontsource/libre-franklin": "4.4.5",
-    "@gravitee/ui-analytics": "3.6.0",
+    "@gravitee/ui-analytics": "4.10.1",
     "@gravitee/ui-components": "3.36.2",
-    "@gravitee/ui-particles-angular": "3.6.0",
-    "@gravitee/ui-policy-studio-angular": "3.0.1",
+    "@gravitee/ui-particles-angular": "4.10.1",
+    "@gravitee/ui-policy-studio-angular": "4.10.1",
     "@highcharts/map-collection": "1.1.4",
     "@toast-ui/editor": "2.5.4",
     "@toast-ui/editor-plugin-code-syntax-highlight": "1.0.0",
@@ -166,7 +166,7 @@
     "storybook": "start-storybook -p 6006 -s src/assets",
     "build-storybook": "build-storybook",
     "serve": "webpack serve -c ./conf/webpack.conf.js --progress --hot",
-    "serve:apim-master": "BACKEND_ENV=apim-master-api.team-apim.gravitee.xyz npm run serve",
+    "serve:apim-master": "BACKEND_ENV=apim-master-api.team-apim.gravitee.dev npm run serve",
     "serve:prod": "node scripts/serve.js",
     "test": "jest --detectOpenHandles",
     "test:auto": "jest --watch",
